--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
-      - ame: Setup Python
+      - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.7.11'
